2010-05-07  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Gustavo Noronha Silva.

        https://bugs.webkit.org/show_bug.cgi?id=38769
        ClipboardGtk should write the URL label in the text portion of the DataObject

        No tests as this code path is currently unused in the GTK+ port.

        * platform/gtk/ClipboardGtk.cpp:
        (WebCore::ClipboardGtk::writeURL): Write the label to the text portion of the DataObject, instead of the URL.

2010-05-07  Nikolas Zimmermann  <nzimmermann@rim.com>

        Reviewed by Dirk Schulze.

        RenderSVGResourceClipper assigns a temporary mutated RenderStyle but does not correctly preserve the old style
        https://bugs.webkit.org/show_bug.cgi?id=38767

        Fix small logic error leading to a problem in RenderSVGResourceClipper. It assigns a new temporary RenderStyle
        to the target object, but fails to reset it correctly to the old style. Fixes all svg/clip-path errors on the windows bots.

        * rendering/RenderSVGResourceClipper.cpp:
        (WebCore::RenderSVGResourceClipper::createClipData):

2010-05-07  Daniel Cheng  <dcheng@chromium.org>

        Reviewed by Jian Li.

        [chromium] DragDataChromium::asURL() shouldn't do file validity checks
        https://bugs.webkit.org/show_bug.cgi?id=38711

        The renderer is sandboxed in Chromium, so these calls will give us no
        meaningful information. The loader will do the right thing if we pass
        it a file URL that points to an invalid file.

        No new tests.

        * platform/chromium/DragDataChromium.cpp:
        (WebCore::DragData::asURL):

2010-05-07  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Dan Bernstein.

        Fix debug-only render tree output to show object addresses in hex.

        * rendering/RenderTreeAsText.cpp:
        (WebCore::writeRenderObject):
        (WebCore::write):

2010-05-07  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Adele Peterson.
