@@ -66,11 +66,11 @@ String DragData::asURL(String* title) const
     String url;
     if (m_platformDragData->hasValidURL())
         url = m_platformDragData->getURL().string();
-    else if (!m_platformDragData->filenames.isEmpty()) {
+    else if (m_platformDragData->filenames.size() == 1) {
         String fileName = m_platformDragData->filenames[0];
         fileName = ChromiumBridge::getAbsolutePath(fileName);
-        // The loader will do the right thing if the filename is invalid for one reason or another.
-        url = ChromiumBridge::filePathToURL(fileName).string();
+        if (fileExists(fileName) && !ChromiumBridge::isDirectory(fileName))
+            url = ChromiumBridge::filePathToURL(fileName).string();
     }
  
     // |title| can be NULL
