@@ -1,3 +1,14 @@
+2010-05-07  Sheriff Bot  <webkit.review.bot@gmail.com>
+
+        Unreviewed, rolling out r58963.
+        http://trac.webkit.org/changeset/58963
+        https://bugs.webkit.org/show_bug.cgi?id=38773
+
+        Broke Chromium layout tests. (Requested by dcheng on #webkit).
+
+        * platform/chromium/DragDataChromium.cpp:
+        (WebCore::DragData::asURL):
+
 2010-05-07  Martin Robinson  <mrobinson@igalia.com>
 
         Reviewed by Gustavo Noronha Silva.
